Fix package declarations.

--- a/bower.json
+++ b/bower.json
@@ -19,8 +19,5 @@
     "node_modules",
     "bower_components"
   ],
-  "main": "dist/worker.umd.js",
-  "dependencies": {
-    "firebase": "2.x"
-  }
+  "main": "dist/worker.umd.js"
 }
