--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "testdouble": "^1.10.2"
   },
+  "peerDependencies": {
+    "firebase": "5.x"
+  },
   "ava": {
     "files": [
       "src/*.test.js"
