--- a/package.json
+++ b/package.json
@@ -24,23 +24,27 @@
   },
   "homepage": "https://github.com/pkaminski/firetruss",
   "devDependencies": {
-    "ava": "^0.17.0",
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/register": "^7.10.5",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "ava": "3",
     "compose-source-map": "^1.0.0",
     "grunt": "^1.0.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-clean": "2",
+    "grunt-contrib-uglify": "5",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-eslint": "^20.1.0",
+    "grunt-eslint": "23",
     "grunt-exec": "^3.0.0",
     "grunt-git": "^1.0.1",
     "grunt-release": "reviewable/grunt-release#master",
-    "grunt-rollup": "^1.0.1",
+    "grunt-rollup": "11",
     "grunt-text-replace": "^0.4.0",
-    "load-grunt-tasks": "^3.5.2",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^5.0.5",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "testdouble": "^1.10.2"
+    "load-grunt-tasks": "5",
+    "rollup": "^2.23.0",
+    "testdouble": "3"
   },
   "peerDependencies": {
     "firebase": "5.x || 6.x || 7.x"
@@ -58,7 +62,7 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "@babel/preset-env"
     ]
   },
   "main": "dist/worker.umd.js",
