--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "testdouble": "3"
   },
   "peerDependencies": {
-    "firebase": "5.x || 6.x || 7.x"
+    "firebase": "5.x || 6.x || 7.x || 8.x || 9.x"
   },
   "ava": {
     "files": [
