Migrate to ESLint Flat configs and use reviewable-configs

--- a/package.json
+++ b/package.json
@@ -29,17 +29,19 @@
     "@rollup/plugin-commonjs": "25.x",
     "@rollup/plugin-node-resolve": "15.x",
     "compose-source-map": "^1.0.0",
+    "globals": "^15.9.0",
     "grunt": "^1.0.0",
     "grunt-contrib-clean": "2",
     "grunt-contrib-uglify": "5",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-eslint": "24.x",
+    "grunt-eslint": "25.x",
     "grunt-exec": "^3.0.0",
     "grunt-git": "^1.0.1",
     "grunt-release": "reviewable/grunt-release#master",
     "grunt-rollup": "12.x",
     "grunt-text-replace": "^0.4.0",
     "load-grunt-tasks": "5",
+    "reviewable-configs": "Reviewable/reviewable-configs",
     "rollup": "4.x",
     "testdouble": "3"
   },
