Add compatibility with Firebase 11.x.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "testdouble": "3"
   },
   "peerDependencies": {
-    "firebase": "5.x || 6.x || 7.x || 8.x || 9.x || 10.x"
+    "firebase": "5.x || 6.x || 7.x || 8.x || 9.x || 10.x || 11.x"
   },
   "ava": {
     "files": [
