--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "firetruss-worker",
-  "version": "3.1.3",
-  "description": "Web worker component for pkaminski/firetruss",
+  "version": "3.1.4",
+  "description": "Web worker component for Reviewable/firetruss",
   "scripts": {
-    "setup": "rm -rf node_modules; npm install;"
+    "lint": "eslint src/*.js",
+    "build": "yarn run grunt",
+    "finalize": "yarn run grunt replace default --release=\"$(jq -r .version package.json)\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:pkaminski/firetruss-worker.git"
-  },
+  "repository": "https://github.com/Reviewable/firetruss-worker",
   "keywords": [
     "firebase",
     "vuejs",
@@ -19,9 +18,9 @@
   "author": "Piotr Kaminski",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pkaminski/firetruss/issues"
+    "url": "https://github.com/Reviewable/firetruss/issues"
   },
-  "homepage": "https://github.com/pkaminski/firetruss",
+  "homepage": "https://github.com/Reviewable/firetruss",
   "devDependencies": {
     "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
@@ -35,29 +34,15 @@
     "grunt-contrib-uglify": "5",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-eslint": "25.x",
-    "grunt-exec": "^3.0.0",
     "grunt-git": "^1.0.1",
-    "grunt-release": "reviewable/grunt-release#master",
     "grunt-rollup": "12.x",
     "grunt-text-replace": "^0.4.0",
     "load-grunt-tasks": "5",
     "reviewable-configs": "Reviewable/reviewable-configs",
-    "rollup": "4.x",
-    "testdouble": "3"
+    "rollup": "4.x"
   },
   "peerDependencies": {
     "firebase": "5.x || 6.x || 7.x || 8.x || 9.x || 10.x || 11.x"
-  },
-  "ava": {
-    "files": [
-      "src/*.test.js"
-    ],
-    "source": [
-      "src/*.js"
-    ],
-    "require": [
-      "babel-register"
-    ]
   },
   "babel": {
     "presets": [
